--- a/pre-academy-homework/css/main.css
+++ b/pre-academy-homework/css/main.css
@@ -36,7 +36,11 @@ li {
 
 /*font styling for h1, h3, h2, h3 and h4*/
 h1 {
-  font-size: 10px;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 40px;
+  font-style: bold;
+  text-align: center;
+
 }
 
 h2 {
@@ -45,13 +49,15 @@ h2 {
 
 h3 {
     font-family: "Indie Flower", cursive;
-    font-size: 15px;
+    font-size: 30px;
 }
 
 h4 {
     font-family: "Domine", bold;
     font-size: 15px;
 }
+
+
 
 
 /*styling for contact section*/
@@ -68,9 +74,19 @@ h4 {
 /*styles the images in the project section - rounded edges*/
 #img-responsive {
   border-radius: 8px;
+  padding: 10px;
 }
 
 
+.container {
+  padding-top: 30px;
+
+}
+
+.row {
+  padding-right: 30px; 
+  padding-left:30px;
+}
 
 /*justify all text on the page*/
 .text {
@@ -97,10 +113,33 @@ h4 {
 .ninja {
    display: none;
   }
+.banner {
+  font-size: 20px;
+}
+}
+
+
+@media (max-width: 900px) {
+
+  .banner {
+    font-size: 25px;
+  }
 }
 
 
 
+
+ul {
+    display: inline;
+    margin: 0;
+    padding: 5px;
+    overflow: hidden;
+
+}
+
+li {
+    float: left;
+}
 
 
 
