--- a/pre-academy-homework/css/main.css
+++ b/pre-academy-homework/css/main.css
@@ -1,3 +1,4 @@
+
 body, html {
     height: 100%;
     width: 100%;
@@ -23,9 +24,11 @@ li {
 #sport, #bass, #reading {
     margin-top: 5vh;
     margin-bottom: 5vh;
-    width: 200px;
-    height: 200px;
-    border-radius: 40%;
+    width: 350px;
+    height: 350px;
+    padding:5px;
+    align-items: center;
+    
 }
 
  .banner {
@@ -38,7 +41,7 @@ li {
 
 }
 
-.menu {
+.navbar {
   background-color: black;
 }
 
@@ -53,6 +56,8 @@ h1 {
 
 h2 {
   font-style: bold;
+  font-size: 35px;
+  text-align: left;
 }
 
 h3 {
@@ -79,26 +84,24 @@ h4 {
 	color: black;
 }
 
-/*styles the images in the project section - rounded edges*/
-#img-responsive {
-  border-radius: 8px;
-  padding: 10px;
-}
 
-
-.container, .row {
-  padding-top: 30px;
+.section {
+  
+    justify-content: center;
+    
 
 }
 
-.row {
-  padding-right: 30px; 
-  padding-left:30px;
+.container {
+  padding-top: 30px; 
 }
 
 /*justify all text on the page*/
 .text {
   text-align: justify;
+}
+.title {
+  text-align: left;
 }
 
 /*footer styling*/
@@ -110,10 +113,6 @@ h4 {
 }
 
 
-/* Add an active class to highlight the current page */
-.active {
-    background: #4caf50;
-}
 
 
 
@@ -135,23 +134,14 @@ h4 {
 }
 
 
+/* media query */
 
-
-ul {
-    display: inline;
-    margin: 0;
-    padding: 5px;
-    overflow: hidden;
-
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="col-"] {
+        width: 100%;
+    }
 }
-
-li {
-    float: left;
-}
-
-
-
-
 
 
 
