--- a/pre-academy-homework/css/main.css
+++ b/pre-academy-homework/css/main.css
@@ -2,8 +2,6 @@ body,
 html {
     font-family: "Mukta Malar", sans-serif;
     font-family: "Titillium Web", sans-serif;
-
-    margin-left: 10px;
     background: white;
     color: black;
     height: 100%;
@@ -11,13 +9,13 @@ html {
 
 }
 
-/*font styling for h1, h3, h2, h3 and h4*/
-h1 {
-  font-size: 40px;
-}
+body {
+  padding-top: 7em;
+  padding-bottom: 10em;
+ }           }
+        
 
-
-/* navigation bar styling */
+/* NAVBAR STYLING */
 .navbar-toggle {
     position: relative;
     float: right;
@@ -71,29 +69,12 @@ li {
 
 }
 
-.container {
-  margin-top: 5em;
-  padding-left: 20px; 
-  padding-right: 20px;
-}
-
 #work {
   max-width: 100%;
   height: auto;
  
 }
 
-/* styles for the hobby section */
-#sport, #bass, #reading {
-    margin-top: 5vh;
-    margin-bottom: 5vh;
-    width: 250px;
-    height: 250px;
-    padding:10px;
-    align-items: center;
-   
-    
-}
 
  .banner {
   font-size: 25px;
@@ -109,32 +90,33 @@ li {
   background-color: black;
 }
 
-/*font styling for h1, h3, h2, h3 and h4*/
-h1 {
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 40px;
-  font-style: bold;
-  text-align: center;
 
-}
+/*TEXT STYLING*/
 
-h2 {
-  font-style: bold;
-  font-size: 35px;
-  text-align: left;
-}
-
-h3 {
-    font-family: "Indie Flower", cursive;
-    font-size: 30px;
-}
 
 h4 {
     font-family: "Domine", bold;
     font-size: 15px;
 }
 
+.quote {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 3em;
+  font-style: bold;
+  text-align: center;
+}
 
+.headline {
+  font-size: 2em;
+  padding: 0.5em;
+  text-align: center;
+  font-family: 'Roboto Condensed', sans-serif;
+
+}
+
+.text {
+  text-align: justify;
+}
 
 
 /*styling for contact section*/
@@ -149,58 +131,70 @@ h4 {
 }
 
 
-.section {
-  
-    justify-content: center;
-    
-}
-
 .container-title {
   margin-top: 3em;
   padding-top: 5em; 
 }
 
-.container-content {
-  
-  padding-top: 1em; 
-}
-
-
-
-/*justify all text on the page*/
-.text {
-  text-align: justify;
-}
-.title {
-  text-align: left;
-}
 
 /* Footer styling */
 .footer {
 	display: block;
+  padding-top: 0.5em;
 	text-align: center;
 	vertical-align: middle;
 	line-height: 10px; 
 }
 
+/*styles the images in the project section - rounded edges*/
+.img-responsive {
+  border-radius: 8px;
+}
+
+/*add additional padding for project card-blocks in project section*/
+.card-block {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.card-title {
+  font-size: 1.2em;
+  font-style: bold;
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
+/*justify all text on the page*/
+.text {
+  text-align: justify;
+}
 
 
+/* ----------- MEDIA QUERY----------- */
 
-/*
-@media (max-width: 500px) {
-.ninja {
-   display: none;
+
+@media only screen and (max-width: 756px) {
+  .quote {
+    font-size: 1.8em;
+    padding-top: 3em;
+    padding-bottom: 3em;
   }
-.banner {
-  font-size: 20px;
-}
-}
+  .container {
+    margin: 0.5em;
+  }
 
+  h1 {
+    font-size: 1.8em;
+    font-style: bold;
 
-@media (max-width: 900px) {
+  }
 
-  .banner {
-    font-size: 10em;
+  h2 {
+    font-size: 1.7em;
+    padding-left: 0.3em;
+  }
+
+  #work {
+    width: 80%;
+    height: auto;
   }
 }
-
